Update layout issue on mobile

--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -4,8 +4,10 @@ body {
   --main-bg-color--start: #f7f7f785;
   --main-bg-color--end: #e5e5e5ba;
 
-  --primary-color: #034a64;
+  --primary-color: #0b526c;
 
   --interactive-text: #0066da;
   --interactive-text--light: #018fee;
+
+  --bio-image-size: 28rem;
 }
